style.css
body,
html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #fff;
    font-family: monospace;
}

.header {
    position: absolute;
    top: 2rem;
    left: 4rem;
    z-index: 1;
    width: fit-content;
    display: flex;
    flex-direction: column;
    align-items: start;
}

.promo-pill {
    position: relative;
    margin-top: 0.75rem;
    margin-left: 0.125rem;
    width: 100%;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
    text-align: center;
    background-color: #000;
    color: #fff;
    border: 1px solid transparent;
    text-decoration: none;
}

.promo-pill:hover {
    background-color: #fff;
    color: #000;
    border: 1px solid #000;
}

.footer {
    position: absolute;
    bottom: 2rem;
    padding: 0.825rem 1rem;
    border: 1px solid #e1e1e1;
    background-color: #fff;
    border-radius: 0.5rem;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#container {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #fff;
    z-index: 0;
}

.ripple {
    position: absolute;
    pointer-events: none;
    animation: ripple-animation 2s linear infinite;
}

@keyframes ripple-animation {
    from {
        transform: scale(0);
        opacity: 1;
    }

    to {
        transform: scale(2);
        opacity: 0;
    }
}

.button-container {
    min-height: 3.1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: transparent;
    position: relative;
}

.button-container:hover .tooltip {
    visibility: visible;
    opacity: 1;
}

.fancy-button {
    padding: 0.5rem 0.65rem;
    color: #000;
    border-radius: 0.35rem;
    border-bottom-left-radius: 0.45rem;
    border-bottom-right-radius: 0.45rem;
    border-left: 0.0625rem solid;
    border-right: 0.0625rem solid;
    border-top: 0.0625rem solid;
    border-bottom: 0.375rem solid;
    cursor: pointer;
    transition: border-bottom-width 0.1s, transform 0.1s;
    display: flex;
    align-items: center;
}

.fancy-button:hover {
    border-bottom-width: 0.125rem;
    border-bottom-left-radius: 0.35rem;
    border-bottom-right-radius: 0.35rem;
}

.fancy-button:active {
    border-bottom-width: 0rem;
    transform: scale(0.95);
}

.tooltip {
    visibility: hidden;
    width: max-content;
    background-color: #000;
    color: #fff;
    text-align: center;
    padding: 4px 12px 4px 12px;
    position: absolute;
    z-index: 1;
    bottom: 102%;
    left: 50%;
    transform: translateX(-50%);
    opacity: 0;
    transition: opacity 0.3s;
    white-space: nowrap;
}

/* Hide tooltips on touch devices */
@media (hover: none) and (pointer: coarse) {
    .tooltip {
        display: none;
    }
}

#colorSwatch {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    background-color: #0096ff;
    border: none;
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
}

#shapeSwatch {
    width: 24px;
    height: 24px;
    border: none;
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
}

.color-picker-popup,
.shape-picker-popup {
    position: absolute;
    bottom: 3rem;
    display: none;
    padding: 0.5rem;
    border: 1px solid #e1e1e1;
    border-radius: 0.25rem;
    background-color: #fff;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    grid-template-columns: repeat(6, auto);
    gap: 0.25rem;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.shape-picker-popup {
    grid-template-columns: repeat(4, auto);
}

.color-picker-popup div,
.shape-picker-popup div {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    cursor: pointer;
}

.dialog-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    cursor: pointer;
    z-index: 10;
    display: none;
}

.dialog-container {
    display: none;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    flex-direction: column;
    width: 85%;
    height: fit-content;
    max-height: 70vh;
    overflow-y: auto;
    border: 1px solid #e1e1e1;
    border-radius: 8px;
    background-color: #fff;
    opacity: 0;
    transition: opacity 0.15s ease;
    z-index: 11;
}

.dialog-container.show {
    display: flex;
    opacity: 1;
}

@media (min-width: 640px) {
    .dialog-container {
        width: 80%;
    }
}

@media (min-width: 768px) {
    .dialog-container {
        width: 65%;
    }
}

@media (min-width: 1024px) {
    .dialog-container {
        width: 50%;
    }
}

@media (min-width: 1280px) {
    .dialog-container {
        width: 40%;
    }
}

.dialog-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: auto;
    padding: 16px 24px;
    border-bottom: 1px solid #e1e1e1;
    color: #101828;
    background-color: #fff;
    position: sticky;
    top: 0;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
}

.header-text {
    font-size: 1.15rem;
}

.close-button {
    border: 1px solid #e1e1e1;
    padding: 9.5px 12px;
    border-radius: 8px;
    cursor: pointer;
    transition: border-color 0.2s;
}

.close-button:hover {
    border-color: #101828;
}

.close-icon {
    width: 10px;
    height: 10px;
}

.dialog-text-only {
    color: #475467;
    font-size: 1.05rem;
    padding: 16px 24px;
}

.bold-italic {
    font-weight: bold;
    font-style: italic;
}

.dialog-divider {
    border-bottom: 1px solid #e1e1e1;
    height: 0;
}

.dialog-text-plus-media {
    color: #667085;
    font-size: 1.05rem;
    padding: 16px 24px;
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.dialog-text {
    color: #475467;
}

.dialog-card-container {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

@media (min-width: 640px) {
    .dialog-card-container {
        flex-direction: row;
    }
}

.dialog-card {
    width: 100%;
    border: 1px solid #e1e1e1;
    border-radius: 8px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

@media (min-width: 640px) {
    .dialog-card {
        width: 50%;
    }
}

.dialog-mediaContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    border-right: 1px solid #e1e1e1;
    padding: 16px;
    min-width: 15%;
    height: auto;
}

.media-video,
.media-image {
    width: 40px;
    height: 40px;
}

@media (min-width: 640px) {

    .media-video,
    .media-image {
        width: 48px;
        height: 48px;
    }
}

.dialog-mediaText {
    font-size: 1.05rem;
    padding: 12px;
    width: 75%;
}

.link {
    text-decoration: underline;
    transition: text-decoration 0.3s;
}

.link:hover {
    text-decoration: none;
}

